<resources>
    <string name="app_name">GoLogin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="login">login</string>
    <string name="registration">Registration</string>
    <string name="sign_in">Sign In</string>
    <string name="e_mail_address">E-mail Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="log_in">Log in</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>